--- a/index.html
+++ b/index.html
@@ -134,20 +134,20 @@
                     <span>혜택</span>
                     <i class="fa-solid fa-plus"></i>
                 </div>
-                <div>
-                    <div>
-                        <div>
-                            <img src="./megabox_img/혜택_작은광고1.jpg" />
+                <div class="section2_ad">
+                    <div class="section2_ad12">
+                        <div class="ad1">
                             <img src="./megabox_img/혜택_작은광고2.jpg" />
+                            <img src="./megabox_img/혜택_작은광고1.jpg" />
                         </div>
-                        <div>
+                        <div class="ad2">
                             <img src="./megabox_img/혜택_광고1.jpg" />
                             <img src="./megabox_img/혜택_광고2.jpg" />
                         </div>
                     </div>
-                    <div><img src="./megabox_img/혜택_광고3.jpg" /></div>
+                    <div class="ad3"><img src="./megabox_img/혜택_광고3.jpg" /></div>
                 </div>
-                <div>
+                <div class="section2_btns">
                     <div>
                         <button>
                             <img src="./megabox_img/ico-vip-main.png" />
