megabox2/index, css: index.html/style.css
section2, section3, header 부분 수정

--- a/index.html
+++ b/index.html
@@ -182,34 +182,42 @@
             </div>
 
             <div class="section3">
-                <div>
+                <div class="curation">
                     <h2>큐레이션</h2>
                     <span>큐레이션 더보기<i class="fa-solid fa-plus"></i></span>
                 </div>
                 <div>
-                    <div>
-                        <img src="./megabox_img/큐레이션_아이다.jpg" /> //큰 이미지
-                        <div>
+                    <div class="section3_aida">
+                        <img src="./megabox_img/큐레이션_아이다.jpg" />
+                        <div class="aida_btn">
                             <button>상세정보</button>
                             <button>예매</button>
                         </div>
                     </div>
-                    <div>
-                        <div>
-                            <p>#클래식소사이어티</p>
-                            <p>[ROH 오페라] 아이다</p>
-                            <p>
-                                새롭게 탄생된 베르디의 정치 드라마,
-                                <br />
-                                사랑과 의무가 충돌하고 국가가 붕괴한다.
-                                <br />
-                                [상영 정보] 상영지점: 성수 / 센트럴 / 분당 / 킨텍스 / 부산대 /
-                                해운대(장산)<br />
-                                상영일정 : 2022년 11월 21일(월) ~ 12월 5일(월) 매주 월요일 상영<br />
-                                러닝타임 : 188분
-                            </p>
+                    <div class="section3_article">
+                        <div class="summary">
+                            <div class="summary_title">
+                                <p>#클래식소사이어티</p>
+                                <p>[ROH 오페라] 아이다</p>
+                            </div>
+                            <div class="summary_content">
+                                <p>
+                                    새롭게 탄생된 베르디의 정치 드라마,
+                                    <br />
+                                    <br />
+                                    사랑과 의무가 충돌하고 국가가 붕괴한다.
+                                    <br />
+                                    <br />
+                                    [상영 정보]<br />
+                                    상영지점 : 성수 / 센트럴 / 분당 / 킨텍스 / 부산대 /
+                                    해운대(장산)<br />
+                                    상영일정 : 2022년 11월 21일(월) ~ 12월 5일(월) 매주 월요일
+                                    상영<br />
+                                    러닝타임 : 188분
+                                </p>
+                            </div>
                         </div>
-                        <div>
+                        <div class="section3_imgs">
                             <div>
                                 <img src="./megabox_img/큐레이션_오르세미술관.jpg" />
                                 <p>[2022 시네도슨트] 오르세 미술관</p>
@@ -294,7 +302,7 @@
                     </div>
                 </div>
             </div>
-            <img src="./megabox_img/섹션_푸터위광고.jpg" />
+            <img class="full_ad" src="./megabox_img/섹션_푸터위광고.jpg" />
         </main>
 
         <!-- 푸터 -->
